packages/frontend/app/routes/trade/orderbook/orderbook.module.css
.orderBookBlock {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: var(--gap-xs);
    gap: var(--gap-xs);
}

.orderBookContainer {
    width: 100%;
    font-size: 0.8rem;
}

.orderBookBlockMid {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    gap: var(--gap-xs);
    background-color: var(--bg-dark4);
    margin: var(--margin-xs) 0;
    padding: 0 var(--padding-m);
}

.orderBookHeader {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    gap: var(--gap-xs);
    margin: var(--margin-xs) 0;
    padding: 0 var(--padding-xs);
    color: var(--text3);
}

.orderRowWrapper {
    width: 100%;
    position: relative;
}

.ratioBar {
    transition: width var(--ease-in-out-med);
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    opacity: 0.2;
}

.dummyOrderRow {
    position: fixed;
    top: -100vh;
    left: 0;
    background-color: var(--dark4);
    z-index: -1;
    opacity: 0;
}

.skeletonWrapper .orderRowWrapper {
    overflow: hidden;
}

.blankRowContent {
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.1);
}

